force-app/main/default/objects/Property_damage__c/Property_damage__c.object-meta.xml
<CustomObject>
    <label>פגיעות רכוש</label>
    <nameField>
        <label>שם הרחוב ומספרו</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>פגיעות רכוש</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>