force-app/main/default/objects/Property_damage__c/fields/Apartment_number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_number__c</fullName>
    <label>Apartment number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>