force-app/main/default/objects/Property_damage__c/fields/Bank_account_number__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_number__c</fullName>
    <label>Bank account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>