force-app/main/default/objects/Property_damage__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 - בנק יהב</fullName>
            </value>
            <value>
                <fullName>9 - בנק הדואר</fullName>
            </value>
            <value>
                <fullName>10 - בנק לאומי</fullName>
            </value>
            <value>
                <fullName>11 - בנק דיסקונט</fullName>
            </value>
            <value>
                <fullName>12 - בנק הפועלים</fullName>
            </value>
            <value>
                <fullName>13 - בנק איגוד</fullName>
            </value>
            <value>
                <fullName>14 - בנק הבינלאומי (לשעבר בנק אוצר החייל)</fullName>
            </value>
            <value>
                <fullName>17 - בנק מרכנתיל דיסקונט</fullName>
            </value>
            <value>
                <fullName>18 - וואן זירו הבנק הדיגיטלי</fullName>
            </value>
            <value>
                <fullName>20 - בנק מזרחי</fullName>
            </value>
            <value>
                <fullName>22 - סיטי בנק (Citibank)</fullName>
            </value>
            <value>
                <fullName>26 - (UBANK בנק הבינלאומי (לשעבר יובנק</fullName>
            </value>
            <value>
                <fullName>31 - בנק הבינלאומי</fullName>
            </value>
            <value>
                <fullName>34 - בנק לאומי (לשעבר בנק ערבי ישראלי)</fullName>
            </value>
            <value>
                <fullName>39 - סטייט בנק אוף אינדייה (State bank of India)</fullName>
            </value>
            <value>
                <fullName>46 - בנק מסד</fullName>
            </value>
            <value>
                <fullName>52 - בנק הבינלאומי (לשעבר בנק פאג&quot;י)</fullName>
            </value>
            <value>
                <fullName>54 - בנק ירושלים</fullName>
            </value>
            <value>
                <fullName>68 - בנק מרכנתיל דיסקונט (לשעבר מוניציפל/דקסיה)</fullName>
            </value>
            <value>
                <fullName>84 - בנק האוזינג (Housing Bank)</fullName>
            </value>
            <value>
                <fullName>99 - בנק ישראל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>