force-app/main/default/objects/Property_damage__c/fields/Cherum_Eligebility_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cherum_Eligebility_Reason__c</fullName>
    <label>Cherum Eligebility Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>direct damage to home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>