force-app/main/default/objects/Property_damage__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Israeli</fullName>
            </value>
            <value>
                <fullName>Not Israeli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>