force-app/main/default/objects/Property_damage__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בת ים</fullName>
            </value>
            <value>
                <fullName>טמרה</fullName>
            </value>
            <value>
                <fullName>חיפה</fullName>
            </value>
            <value>
                <fullName>ראשון לציון</fullName>
            </value>
            <value>
                <fullName>רמת גן</fullName>
            </value>
            <value>
                <fullName>פתח תקווה</fullName>
            </value>
            <value>
                <fullName>רחובות</fullName>
            </value>
            <value>
                <fullName>תל אביב</fullName>
            </value>
            <value>
                <fullName>זבדיאל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>