force-app/main/default/objects/Property_damage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property damage</relationshipLabel>
    <relationshipName>Property_damage</relationshipName>
    <type>Lookup</type>
</CustomField>