force-app/main/default/objects/Property_damage__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>