force-app/main/default/objects/Property_damage__c/fields/Incident_Description_External__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description_External__c</fullName>
    <label>Incident Description External</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>