force-app/main/default/objects/Property_damage__c/fields/Is_it_a_shared_apartment__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_shared_apartment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it a shared apartment?</label>
    <type>Checkbox</type>
</CustomField>