force-app/main/default/objects/Property_damage__c/fields/Israeli_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Israeli_ID_number__c</fullName>
    <label>Israeli ID number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>