force-app/main/default/objects/Property_damage__c/fields/Tenant_Apartment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Apartment_Owner__c</fullName>
    <label>Tenant/Apartment Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>