force-app/main/default/objects/Property_damage__c/validationRules/Validate_LASTName_No_Spaces_At_Edges.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_LASTName_No_Spaces_At_Edges</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
LEFT(  Last_name__c  , 1) = &quot; &quot;,
RIGHT(Last_name__c , 1) = &quot; &quot;
)</errorConditionFormula>
    <errorDisplayField>Last_name__c</errorDisplayField>
    <errorMessage>שדה זה לא יכול להתחיל או להסתיים ברווח. ניתן להוסיף רווחים רק בין המילים</errorMessage>
</ValidationRule>