force-app/main/default/objects/Property_damage__c/validationRules/Validate_Phone_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Number_Format</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CONTAINS(  Mobile__c  ,&quot;-&quot;),true ,false)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>נא להכניס רק מספרים התו &quot;-&quot; לא מתקבל</errorMessage>
</ValidationRule>